adding a chatgpt request extension to test

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
     // "remoteUser": "vscode",
     "extensions": [
 		"ms-vscode.live-server",
-    "github.github-vscode-theme"
+    "github.github-vscode-theme",
+    "jaybarnes.chatgpt-vscode-plugin"
     ]
 }
