--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
 
     "recommendations": ["ms-vscode.live-server",
-    "github.github-vscode-theme"],
-    "jaybarnes.chatgpt-vscode-plugin"
+    "github.github-vscode-theme",
+    "jaybarnes.chatgpt-vscode-plugin",
+    "tomoki1207.pdf"]
 
 }
